tests/type-errors/12-let-rhs-error.flt
// Let binding RHS type error
// --- Command: dotnet run --project FunLang -- --emit-type --expr "let x = true in x + 1" 2>&1
// --- ExitCode: 1
// --- Output:
error[E0301]: Type mismatch: expected bool but got int
 --> <expr>:1:16-21
   = in body of 'x': <expr>:1:0-21
   = note: in let x body at <expr>:1:0-21
   = hint: Check that all branches of your expression return the same type
